web/src/components/Info/index.module.css
.container {
  display: flex;
  flex-direction: column;
  height: 69vh;
  width: 35.9vw;
  padding: 0 2.2vw;
  box-shadow: rgb(0, 0, 0, 0.35) 0px 0px 16px;
}

.header {
  width: 100%;
  height: 23vh;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1vw;
}

.imgHousing {
  height: 14.8vh;
  width: 8.4vw;
  margin-top: 0.4vh;
  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.05) 0px 0px 6px; */
  display: flex;
  justify-content: center;
  align-items: center;
}

.textHousing {
  height: 15vh;
  width: 21vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 0.6vw;
}

.img {
  width: 7vw;
  height: 7vw;
}

.heading {
  font-size: 1.9vw;
  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.25), -3px 0px 7px rgba(0, 0, 0, 0.25),
    0px 4px 7px rgba(0, 0, 0, 0.25);
  font-family: 'Black';
  margin-left: -0.18vh;
  height: 4vh;
}

.description {
  font-size: 1.12vw;
  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.25), -3px 0px 7px rgba(0, 0, 0, 0.25),
    0px 4px 7px rgba(0, 0, 0, 0.25);
  line-height: 1;
}

.flex {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.8vw;
}

.icon {
  font-size: 1.2vw;
  filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.45));
}

.smallText {
  font-size: 1.1vw;
  text-shadow: 3px 0px 7px rgba(0, 0, 0, 0.25), -3px 0px 7px rgba(0, 0, 0, 0.25),
    0px 4px 7px rgba(0, 0, 0, 0.25);
  margin-top: -0.4vh;
}

.middle {
  width: 100%;
  height: 30vh;
  /* background-color: rgba(200, 255, 0, 0.414); */
}

.spacer {
  width: 100%;
  height: 2.7vh;
}

.queue {
  width: 100%;
  height: 17vh;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  gap: 2.4vw;
  overflow-y: auto;
  padding: 0 2vw;
}

.bottom {
  width: 100%;
  height: 9.3vh;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  gap: 1.2vw;
}

.fave {
  width: 2.8vw;
  height: 5vh;
  position: absolute;
  margin-left: 28.3vw;
  margin-top: -10vh;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  overflow: hidden;
}

.star {
  font-size: 1.05vw;
  filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.45));
}

